fix: added all the dashboard category
